# SPTanalysis

./: README.md  pyproject.toml
sptanalysis/: angles.py  msd.py  nnd.py
sptanalysis/utils/: util_functions.py
src/sptanalysis/: __init__.py  msd.py
